--- a/first-neural-network/Your_first_neural_network.ipynb
+++ b/first-neural-network/Your_first_neural_network.ipynb
@@ -658,33 +658,33 @@
     "            ### Forward pass ###\n",
     "            # TODO: Hidden layer - Replace these values with your calculations.\n",
     "            hidden_inputs = X # signals into hidden layer\n",
-    "            hidden_outputs = self.activation_function(X) # signals from hidden layer\n",
+    "            hidden_outputs = self.activation_function(np.dot(X, self.weights_input_to_hidden) # signals from hidden layer\n",
     "\n",
     "            # TODO: Output layer - Replace these values with your calculations.\n",
     "            final_inputs = hidden_outputs # signals into final output layer\n",
-    "            final_outputs = final_outputs # signals from final output layer\n",
+    "            final_outputs = np.dot(final_inputs, self.weights_hidden_to_output) # signals from final output layer\n",
     "            \n",
     "            #### Implement the backward pass here ####\n",
     "            ### Backward pass ###\n",
     "\n",
     "            # TODO: Output error - Replace this value with your calculations.\n",
-    "            error = None # Output layer error is the difference between desired target and actual output.\n",
+    "            error = y - final_outputs # Output layer error is the difference between desired target and actual output.\n",
     "            \n",
     "            # TODO: Calculate the hidden layer's contribution to the error\n",
-    "            hidden_error = None\n",
+    "            hidden_error = \n",
     "            \n",
     "            # TODO: Backpropagated error terms - Replace these values with your calculations.\n",
-    "            output_error_term = None\n",
-    "            hidden_error_term = None\n",
+    "            output_error_term = error * 1\n",
+    "            hidden_error_term = hidden_error * (hidden_outputs) * (1-hidden_outputs)\n",
     "\n",
     "            # Weight step (input to hidden)\n",
-    "            delta_weights_i_h += None\n",
+    "            delta_weights_i_h += hidden_outputs * hidden_error_term\n",
     "            # Weight step (hidden to output)\n",
-    "            delta_weights_h_o += None\n",
+    "            delta_weights_h_o += final_outputs * output_error_term \n",
     "\n",
     "        # TODO: Update the weights - Replace these values with your calculations.\n",
-    "        self.weights_hidden_to_output += None # update hidden-to-output weights with gradient descent step\n",
-    "        self.weights_input_to_hidden += None # update input-to-hidden weights with gradient descent step\n",
+    "        self.weights_hidden_to_output += delta_weights_h_o * self.lr / n_records  # update hidden-to-output weights with gradient descent step\n",
+    "        self.weights_input_to_hidden += delta_weights_i_h # update input-to-hidden weights with gradient descent step\n",
     " \n",
     "    def run(self, features):\n",
     "        ''' Run a forward pass through the network with input features \n",
