--- a/first-neural-network/Your_first_neural_network.ipynb
+++ b/first-neural-network/Your_first_neural_network.ipynb
@@ -46,7 +46,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -606,9 +608,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-20-bfcdf506b1d8>, line 53)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-20-bfcdf506b1d8>\"\u001b[1;36m, line \u001b[1;32m53\u001b[0m\n\u001b[1;33m    final_outputs = np.dot(hidden_outputs, self.weights_hidden_to_output) # signals from final output layer\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "class NeuralNetwork(object):\n",
     "    def __init__(self, input_nodes, hidden_nodes, output_nodes, learning_rate):\n",
@@ -661,8 +672,8 @@
     "            hidden_outputs = self.activation_function(np.dot(X, self.weights_input_to_hidden) # signals from hidden layer\n",
     "\n",
     "            # TODO: Output layer - Replace these values with your calculations.\n",
-    "            final_inputs = hidden_outputs # signals into final output layer\n",
-    "            final_outputs = np.dot(final_inputs, self.weights_hidden_to_output) # signals from final output layer\n",
+    "            final_inputs = hidden_outputs  # signals into final output layer\n",
+    "            final_outputs = np.dot(hidden_outputs, self.weights_hidden_to_output) # signals from final output layer\n",
     "            \n",
     "            #### Implement the backward pass here ####\n",
     "            ### Backward pass ###\n",
@@ -671,7 +682,7 @@
     "            error = y - final_outputs # Output layer error is the difference between desired target and actual output.\n",
     "            \n",
     "            # TODO: Calculate the hidden layer's contribution to the error\n",
-    "            hidden_error = \n",
+    "            hidden_error = self.weights_hidden_to_output * error \n",
     "            \n",
     "            # TODO: Backpropagated error terms - Replace these values with your calculations.\n",
     "            output_error_term = error * 1\n",
