--- a/ipnd-neural-network/Network.ipynb
+++ b/ipnd-neural-network/Network.ipynb
@@ -700,10 +700,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class NeuralNetwork(object):\n",
@@ -713,7 +711,6 @@
     "        self.hidden_nodes = hidden_nodes\n",
     "        self.output_nodes = output_nodes\n",
     "\n",
-    "        # Initialize weights\n",
     "        self.weights_input_to_hidden = np.random.normal(0.0, self.input_nodes**-0.5, \n",
     "                                       (self.input_nodes, self.hidden_nodes))\n",
     "\n",
@@ -721,66 +718,56 @@
     "                                       (self.hidden_nodes, self.output_nodes))\n",
     "        self.lr = learning_rate\n",
     "        \n",
-    "        #### TODO: Set self.activation_function to your implemented sigmoid function ####\n",
-    "        #\n",
-    "        # Note: in Python, you can define a function with a lambda expression,\n",
-    "        # as shown below.\n",
-    "        self.activation_function = lambda x : 0  # Replace 0 with your sigmoid calculation.\n",
+    "        self.activation_function = lambda x : 1/(1 - np.exp( -x ))  # Replace 0 with your sigmoid calculation.\n",
     "        \n",
-    "        ### If the lambda code above is not something you're familiar with,\n",
-    "        # You can uncomment out the following three lines and put your \n",
-    "        # implementation there instead.\n",
-    "        #\n",
-    "        #def sigmoid(x):\n",
-    "        #    return 0  # Replace 0 with your sigmoid calculation here\n",
-    "        #self.activation_function = sigmoid\n",
-    "                    \n",
     "    \n",
     "    def train(self, features, targets):\n",
     "        ''' Train the network on batch of features and targets. \n",
     "        \n",
     "            Arguments\n",
     "            ---------\n",
-    "            \n",
     "            features: 2D array, each row is one data record, each column is a feature\n",
     "            targets: 1D array of target values\n",
     "        \n",
     "        '''\n",
-    "        n_records = features.shape[0]\n",
+    "        n_records = features.shape[0] # get number of rows\n",
     "        delta_weights_i_h = np.zeros(self.weights_input_to_hidden.shape)\n",
     "        delta_weights_h_o = np.zeros(self.weights_hidden_to_output.shape)\n",
     "        for X, y in zip(features, targets):\n",
     "            #### Implement the forward pass here ####\n",
     "            ### Forward pass ###\n",
     "            # TODO: Hidden layer - Replace these values with your calculations.\n",
-    "            hidden_inputs = None # signals into hidden layer\n",
-    "            hidden_outputs = None # signals from hidden layer\n",
+    "            print (self.weights_input_to_hidden.shape)\n",
+    "            print (features.shape)\n",
+    "            hidden_inputs = np.dot(self.weights_input_to_hidden, features) # signals into hidden layer\n",
+    "            \n",
+    "            hidden_outputs = self.activation_function(hidden_inputs) # signals from hidden layer\n",
     "\n",
     "            # TODO: Output layer - Replace these values with your calculations.\n",
-    "            final_inputs = None # signals into final output layer\n",
-    "            final_outputs = None # signals from final output layer\n",
+    "            final_inputs = np.dot(self.weights_hidden_to_output,self.weights_hidden_to_output) # signals into final output layer\n",
+    "            final_outputs = final_inputs # signals from final output layer\n",
     "            \n",
     "            #### Implement the backward pass here ####\n",
     "            ### Backward pass ###\n",
-    "\n",
     "            # TODO: Output error - Replace this value with your calculations.\n",
-    "            error = None # Output layer error is the difference between desired target and actual output.\n",
+    "            error = final_outputs - targets # Output layer error is the difference between desired target and actual output.\n",
     "            \n",
     "            # TODO: Calculate the hidden layer's contribution to the error\n",
-    "            hidden_error = None\n",
+    "            # hidden_error = self.weights_hidden_to_output * error * self.activation_function_prime(  )\n",
+    "            hidden_error = self.weights_hidden_to_output * error \n",
     "            \n",
     "            # TODO: Backpropagated error terms - Replace these values with your calculations.\n",
-    "            output_error_term = None\n",
-    "            hidden_error_term = None\n",
+    "            output_error_term = error\n",
+    "            hidden_error_term = hidden_error * final_inputs * (1-final_inputs)\n",
     "\n",
     "            # Weight step (input to hidden)\n",
-    "            delta_weights_i_h += None\n",
+    "            delta_weights_i_h += self.lr * np.dot(hidden_inputs, hidden_error_term)\n",
     "            # Weight step (hidden to output)\n",
-    "            delta_weights_h_o += None\n",
+    "            delta_weights_h_o += self.lr * output_error_term * final_inputs\n",
     "\n",
     "        # TODO: Update the weights - Replace these values with your calculations.\n",
-    "        self.weights_hidden_to_output += None # update hidden-to-output weights with gradient descent step\n",
-    "        self.weights_input_to_hidden += None # update input-to-hidden weights with gradient descent step\n",
+    "        self.weights_hidden_to_output += delta_weights_h_o # update hidden-to-output weights with gradient descent step\n",
+    "        self.weights_input_to_hidden += delta_weights_i_h # update input-to-hidden weights with gradient descent step\n",
     " \n",
     "    def run(self, features):\n",
     "        ''' Run a forward pass through the network with input features \n",
@@ -792,12 +779,12 @@
     "        \n",
     "        #### Implement the forward pass here ####\n",
     "        # TODO: Hidden layer - replace these values with the appropriate calculations.\n",
-    "        hidden_inputs = None # signals into hidden layer\n",
-    "        hidden_outputs = None # signals from hidden layer\n",
+    "        hidden_inputs = features # signals into hidden layer\n",
+    "        hidden_outputs = self.activation_function(np.dot(self.weights_input_to_hidden,hidden_inputs)) # signals from hidden layer\n",
     "        \n",
     "        # TODO: Output layer - Replace these values with the appropriate calculations.\n",
-    "        final_inputs = None # signals into final output layer\n",
-    "        final_outputs = None # signals from final output layer \n",
+    "        final_inputs = np.dot(hidden_outputs, self.weights_hidden_to_output  ) # signals into final output layer\n",
+    "        final_outputs = final_inputs # signals from final output layer \n",
     "        \n",
     "        return final_outputs"
    ]
@@ -812,9 +799,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "F..EE\n",
+      "======================================================================\n",
+      "ERROR: test_run (__main__.TestMethods)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-25-4784275f6761>\", line 50, in test_run\n",
+      "    self.assertTrue(np.allclose(network.run(inputs), 0.09998924))\n",
+      "  File \"<ipython-input-24-9824c832877c>\", line 80, in run\n",
+      "    final_inputs = np.dot(hidden_outputs, self.weights_hidden_to_output  ) # signals into final output layer\n",
+      "ValueError: shapes (2,) and (1,2) not aligned: 2 (dim 0) != 1 (dim 0)\n",
+      "\n",
+      "======================================================================\n",
+      "ERROR: test_train (__main__.TestMethods)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-25-4784275f6761>\", line 38, in test_train\n",
+      "    network.train(inputs, targets)\n",
+      "  File \"<ipython-input-24-9824c832877c>\", line 27, in train\n",
+      "    n_records = features.shape[0] # get number of rows\n",
+      "AttributeError: 'list' object has no attribute 'shape'\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_activation (__main__.TestMethods)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-25-4784275f6761>\", line 30, in test_activation\n",
+      "    self.assertTrue(np.all(network.activation_function(0.5) == 1/(1+np.exp(-0.5))))\n",
+      "AssertionError: False is not true\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 5 tests in 0.009s\n",
+      "\n",
+      "FAILED (failures=1, errors=2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=5 errors=2 failures=1>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import unittest\n",
     "\n",
